fix: filters scrollbar bug

--- a/src/scss/includes/modules/interviews/_interviews-grid.scss
+++ b/src/scss/includes/modules/interviews/_interviews-grid.scss
@@ -607,9 +607,11 @@
 
         @include breakpoint(desktop) {
             position: absolute;
-            inset: calc(100% - 1px) calc(var(--grid-margin) * -1) auto;
             height: var(--app-height);
             z-index: 4;
+            top: 0;
+            left: calc(var(--grid-margin) * -1);
+            width: calc(100vw - var(--GLOBAL-aside-width));
         }
 
 
